strong spacing css

--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -590,7 +590,7 @@
       a.qname {
          font-family: monospace;
       }
-      strong {
+      strong.crossreference {
          padding-right: 15px;
       }
      </style>
