--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -653,7 +653,7 @@
           //subtitle   :  "",
 
           // if you wish the publication date to be other than today, set this
-          publishDate:  "2012-06-29",
+          publishDate:  "2012-07-01",
 
           // if the specification's copyright date is a range of years, specify
           // the start date here:
@@ -883,6 +883,15 @@
          {% include "includes/at-a-glance-qualified.html" %}
          {% include "includes/cross-reference-qualified.html" %}
       </section>
+
+      <!--section id="cross-reference-access-and-query">
+         <h3>Qualified Terms</h3>
+         <p>The terms used to qualify the Starting Point and Expanded properties are discussed in <a href="#description-qualified-terms">Section 3.3</a>.</p-->
+      <div id="prov-access-and-query-owl-terms-at-a-glance">
+         {% include "includes/at-a-glance-access-and-query.html" %}
+      </div>
+         {% include "includes/cross-reference-access-and-query.html" %}
+      <!--/section-->
    </section>
 
     <!--section class="appendix">
